<resources>
    <string name="app_name">Project_Kotlin</string>
    <string name="btn_login">Login</string>
    <string name="title_frg_twilio">TWILIO</string>
    <string name="txt_state">State : </string>
    <string name="btn_picture">Take a picture</string>
    <string name="permissions_denied">The permissions are denied !</string>
    <string name="title_picture_frg">Picture </string>

    <string name="txt_name">Name</string>
    <string name="txt_username">Username</string>
    <string name="txt_email">Email</string>

    <string name="btn_users">Go to list !</string>

    <string name="menu_item_add_user">new user</string>
    <string name="menu_item_choice_2">second</string>
    <string name="menu_item_choice_3">third</string>

    <string name="btn_nav">My navigation</string>
</resources>
