<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:text="@string/title_frg_twilio"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_state"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="37dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView2" />

    <TextView
        android:id="@+id/value_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.021" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_picture"
        android:text="@string/btn_picture"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/value_state"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_users"
        android:text="@string/btn_users"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_picture"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_nav"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_users"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>